src/index.css
/* ... */
@media (max-width: 1024px) {
    .chatbox {
        transform: scale(0.8);
    }

    .about-content {
        padding: 1rem;
        padding-left: 3rem;
        padding-right: 3rem;
        padding-bottom: 5rem;
    }

    .footer-text {
        font-size: 1.3rem;
    }
}

@media (max-width: 1000px) {
    .chatbox {
        transform: scale(0.7);
        width: auto;

    }
    .animation {
        transform: scale(0.9);

    }

    .background-animation{
        justify-content: center;
    }

    .contact-container {
        height: 60px;
        gap: 20px;
    }

    .contact-button {
        width: 25px;
        height: 25px;
    }

    .about,
    .projects {
        width: 80px;
        height: 31px;
    }

    .about:hover {
        border-radius: 0px;
    }
    
    .projects:hover {
        border-radius: 0px;
    }

    .button-text {
        font-size: 1rem;
    }

    .about{
        margin-right: 20px;
    }

    .about-content {
        padding: 1rem;
        padding-left: 3rem;
        padding-right: 3rem;
        padding-bottom: 5rem;
    }

}

@media (max-width: 950px) {
    .name {
        font-size: 1.5rem;
    }
    .about-content h2 {
        font-size: 1.5rem;
    }
    .contact-container {
        height: 60px;
        gap: 20px;
    }
    
    .contact-button {
        width: 25px;
        height: 25px;
    }

    .about-container p {
        font-size: 1.1rem;
    }

    .about-content {
        padding: 1rem;
        padding-left: 2.8rem;
        padding-right: 2.8rem;
        padding-bottom: 4.5rem;
    }

    .footer-text {
        font-size: 1.2rem;
    }

}

@media (max-width: 768px) {
    .name {
        font-size: 1.5rem;
    }
    .about-content h2 {
        font-size: 1.5rem;
    }
    .contact-container {
        height: 55px;
        gap: 16px;
    }
    
    .contact-button {
        width: 24px;
        height: 24px;
    }

    .about-container p {
        font-size: 1rem;
    }

    .about-container {
        gap: 20px;
    }

    .links {
        display:none;
    }

    .mobile-nav {
        display: block;
    }

    .hamburger-button {
        display: block;
        cursor: pointer;
    }

    .dropdown-menu button {
        width: 100%;
        margin: 5px 0;
        text-align: left;
    }

    .about{
        border-bottom: 1px solid #dfdfdf;
    }

}

@media (max-width: 700px) {
    .name {
        font-size: 1.2rem;
    }

    .links {
        display:none;
    }

    .about-content h2 {
        font-size: 1.2rem;
    }

    .about-container p {
        font-size: 1rem;
    }

    .about-content {
        padding: 1rem;
        padding-left: 2.5rem;
        padding-right: 2.5rem;
        padding-bottom: 4rem;
    }

    .about-container{
        gap: 15px;
    }


    .chatbox {
        transform: scale(0.6);
    }

    .contact-container {
        height: 50px;
        gap: 15px;
    }

    .contact-button {
        width: 20px;
        height: 20px;
    }

    .contact-container img {
        width: 30px;
        height: 30px;
    }


}

@media (max-width: 665px) {
    .about-content h2 {
        font-size: 1.3rem;
    }

    .name {
        font-size: 1.3rem;
    }


    .about-content {
        padding: 2rem;
        padding-left: 1.8rem;
        padding-right: 1.8rem;
        padding-bottom: 3.2rem;
    }

    .contact-container {
        height: 45px;
        gap: 12px;
    }

    .contact-button {
        width: 18px;
        height: 18px;
    }

    .contact-container img {
        width: 25px;
        height: 25px;
    }

    .footer-text {
        font-size: 1rem;
    }

    .about-container{
        flex-direction: column;
    }

    .about-container img {
        display: none;
    }

    .about-container p {
        padding: 0;
        font-size: 1.2rem;
    }

    .about-content{
        border: 4px solid #121212;
        background-image: none;
        background: white;
        border-radius: 10px;
    }
}


@media (max-width: 600px){
    .chatbox {
        flex-direction: column;

        justify-content: center;
    }

    .chatbox-text {
        align-self: center;
        margin-top:20%;
    }

    .text {
        margin-top: 3%;
    }

    .about-content p {
        font-size: 1rem;
    }

    .animation {
        align-self: center;
        transform: scale(1);
    }


}

@media (max-width: 391px){
    .chatbox {
        flex-direction: column;
        transform: scale(0.5);
        justify-content: center;
    }

    .chatbox-text {
        align-self: center;
        margin-top:20%;
    }

    .text {
        align-self: center;
        font-size: 1.8rem;
    }

    .about-content h2 {
        font-size: 1.1rem;
    }

    .about-container p {
        font-size: 1rem;
    }



}

